commiting color changes and 5 images in the carousel

--- a/index2.html
+++ b/index2.html
@@ -19,14 +19,14 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <div class="logo-main">Motions and Emotions</div>
-                <div class="logo-byline">by Ashay Parikh</div>
+                <img src="images/Ai coach icon.png" alt="AI Coach Icon" class="ai-coach-logo">
+                <a href="index2.html" class="logo-main">Motions and Emotions</a>
             </div>
         </div>
         <nav class="right-nav">
             <ul>
                 <li><a href="#">PORTFOLIO +</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="#">BLOG</a></li>
             </ul>
         </nav>
@@ -34,8 +34,8 @@
 
     <main class="hero-content">
         <div class="hero-text-container">
-            <h1 class="hero-title">Motions and Emotions</h1>
-            <p class="hero-tagline">LIGHT-FILLED. HEARTFELT. TIMELESS.</p>
+            <h1 class="hero-title">Capturing life as it happens</h1>
+            <p class="hero-tagline">By Ashay Parikh</p>
         </div>
     </main>
 
@@ -53,9 +53,13 @@
             <div class="philosophy-left-column">
                 <div class="philosophy-content">
                     <p class="philosophy-subtitle">MY PHILOSOPHY</p>
-                    <h2 class="philosophy-headline">LASTING MEMORIES<br>THROUGH SOULFUL,<br>LIGHT-FILLED IMAGERY</h2>
-                    <p class="philosophy-text">Hi, I'm so glad you're here. I'm a natural light photographer with a love for simple, honest moments. My style is clean, airy, and full of emotion—focused on capturing your story in a way that feels real and effortless. Whether we're shooting in the comfort of your home or outside in nature, I aim to create images that feel warm, natural, and timeless. From growing bellies to joyful families and quiet couple moments, I'm here to document it all with heart. This space is a little glimpse into my world and the intention behind my work.</p>
-                    <a href="#" class="learn-more-btn">LEARN MORE ABOUT DREAMYCLICKS</a>
+                    <h2 class="philosophy-headline">WE LIVE LIFE<br>THAT IS WORTH CAPTURING<br> </h2>
+                    <p class="philosophy-text">Greetings, I capture life as it happens. The gentle sway of a dress in the breeze, the blur of a cityscape at
+                            dusk, the unbridled laughter that moves through a family—these are the motions that tell our story. But just as important are the emotions 
+                            that fill those moments: the quiet joy in a lover's gaze, the heartfelt tear during a ceremony, the pure excitement of a child at play. My 
+                            passion is to capture both. I see photography not as a way to freeze time, but as a way to preserve the energy and feeling of life as it
+                            unfolds. It’s about bottling the beautiful chaos of movement and the profound stillness of emotion, creating images that are not just seen, but felt.</p>
+                    <a href="#" class="learn-more-btn">LEARN MORE ABOUT M&E</a>
                 </div>
             </div>
         </div>
