added blog section and about me section - text would be rectified later

--- a/index2.html
+++ b/index2.html
@@ -13,21 +13,20 @@
         <nav class="left-nav">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SERVICES</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="services.html">SERVICES</a></li>
             </ul>
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <img src="images/Ai coach icon.png" alt="AI Coach Icon" class="ai-coach-logo">
-                <a href="index2.html" class="logo-main">Motions and Emotions</a>
+                <a href="index2.html"><img src="images/new logo.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
             <ul>
                 <li><a href="#">PORTFOLIO +</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog-preview.html">BLOG</a></li>
             </ul>
         </nav>
     </header>
