--- a/contact.html
+++ b/contact.html
@@ -13,21 +13,20 @@
         <nav class="left-nav">
             <ul>
                 <li><a href="index2.html">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SERVICES</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="services.html">SERVICES</a></li>
             </ul>
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <img src="images/Ai coach icon.png" alt="AI Coach Icon" class="ai-coach-logo">
-                <a href="index2.html" class="logo-main">Motions and Emotions</a>
+                <a href="index2.html"><img src="images/new logo.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
             <ul>
                 <li><a href="#">PORTFOLIO +</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog-preview.html">BLOG</a></li>
             </ul>
         </nav>
     </header>
@@ -39,6 +38,7 @@
                 <section class="contact-form-section">
                     <h1>Get In Touch</h1>
                     <p>I'd love to hear from you. Please fill out the form below to get in touch about your photography needs.</p>
+                    <p class="future-feature-note">An appointment scheduler will be available here soon for your convenience.</p>
                     <form action="#" method="POST" class="contact-form">
                         <div class="form-group">
                             <label for="name">Name</label>
@@ -47,6 +47,10 @@
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone</label>
+                            <input type="tel" id="phone" name="phone">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
