Refactor: Rename index2.html to index.html and update all internal links. Implement portfolio dropdown and public events page with masonry layout. Update logo. Optimize carousel images.

--- a/about.html
+++ b/about.html
@@ -12,19 +12,28 @@
     <header class="main-header fixed-header">
         <nav class="left-nav">
             <ul>
-                <li><a href="index2.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">SERVICES</a></li>
             </ul>
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index2.html"><img src="images/new logo.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
             <ul>
-                <li><a href="#">PORTFOLIO +</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">PORTFOLIO +</a>
+                    <div class="dropdown-content">
+                        <a href="public-events.html">Public Events</a>
+                        <a href="private-events.html">Private Events</a>
+                        <a href="portraits.html">Portraits</a>
+                        <a href="landscapes-nature.html">Landscapes & Nature</a>
+                        <a href="architecture-cityscapes.html">Architecture & Cityscapes</a>
+                    </div>
+                </li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="blog-preview.html">BLOG</a></li>
             </ul>
@@ -58,10 +67,10 @@
         <!-- Bottom Section -->
         <section class="about-section about-bottom">
             <div class="about-text-content">
-                <h2>Where you start finding the joy in little things and every emotions and beauty is worth capturing.</h2>
-                <p>My journey is fueled by a relentless pursuit of motion and emotion, whether it’s through my camera, my code, or my personal adventures. My biggest obsession? Skydiving. The unparalleled freedom and the breathtaking perspectives I gain from thousands of feet up inspire me daily to push boundaries, both creatively and technically.</p>
-                <p>This obsession extends into the realm of photography tools and apps. I'm constantly experimenting with cutting-edge technology and developing bespoke solutions to enhance the art and science of visual storytelling. Imagine photography apps that intuitively capture dynamic scenes or tools that seamlessly blend the raw emotion of a moment with technical perfection.</p>
-                <p>I believe in sharing knowledge and building a community. That’s why I’m actively working on creating insightful content—from tutorials on advanced photography techniques to deep dives into the science behind a perfect shot, and even insights into developing your own photography tools. Expect new apps, innovative workflows, and engaging content designed to elevate your craft.</p>
+                <h2>My Ambition with Motions & Emotions</h2>
+                <p>My ambition is to capture and convey the very essence of 'Motions & Emotions'. This relentless pursuit drives my journey, whether it’s through the lens of my camera, the logic of my code, or the thrill of my personal adventures. Skydiving, my biggest obsession, offers unparalleled freedom and breathtaking perspectives from thousands of feet up, constantly inspiring me to push creative and technical boundaries to tell compelling stories.</p>
+                <p>This ambition extends deeply into developing bespoke photography tools and apps. I'm constantly experimenting with cutting-edge technology to enhance the art and science of visual storytelling. My goal is to create intuitive applications that capture dynamic scenes and tools that seamlessly blend the raw emotion of a moment with technical perfection, allowing for truly impactful narratives.</p>
+                <p>Ultimately, my ambition is also to share this passion and knowledge, building a vibrant community around the craft. I'm actively creating insightful content—from tutorials on advanced photography techniques to deep dives into the science behind a perfect shot, and insights into developing your own innovative photography tools. Expect new apps, streamlined workflows, and engaging content, all designed to elevate our collective craft. This is my ambition: to inspire and be inspired by the beautiful interplay of motions and emotions.</p>
             </div>
             <div class="about-image-placeholder"></div>
         </section>
