--- a/blog-preview.html
+++ b/blog-preview.html
@@ -12,19 +12,28 @@
     <header class="main-header fixed-header">
         <nav class="left-nav">
             <ul>
-                <li><a href="index2.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="services.html">SERVICES</a></li>
             </ul>
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index2.html"><img src="images/new logo.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
             <ul>
-                <li><a href="#">PORTFOLIO +</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">PORTFOLIO +</a>
+                    <div class="dropdown-content">
+                        <a href="public-events.html">Public Events</a>
+                        <a href="private-events.html">Private Events</a>
+                        <a href="portraits.html">Portraits</a>
+                        <a href="landscapes-nature.html">Landscapes & Nature</a>
+                        <a href="architecture-cityscapes.html">Architecture & Cityscapes</a>
+                    </div>
+                </li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="blog-preview.html">BLOG</a></li>
             </ul>
