Refactor: Restructure project with assets folder, normalize image paths and filenames, and fix CSS linking

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Motions and Emotions</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -44,8 +44,8 @@
         <!-- Top Section -->
         <section class="about-section about-top">
             <div class="about-image-placeholder">
-                <img src="images/About me - Ashay Image.webp" alt="About Ashay Image 1" class="about-image active">
-                <img src="images/About me - Ashay image 2.webp" alt="About Ashay Image 2" class="about-image">
+                <img src="assets/images/about-me-ashay-image.webp" alt="About Ashay Image 1" class="about-image active">
+                <img src="assets/images/about-me-ashay-image-2.webp" alt="About Ashay Image 2" class="about-image">
             </div>
             <div class="about-text-content">
                 <h2>Hi, it's me Ashay!</h2>
