--- a/home2.html
+++ b/home2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turnstone Wellness - Home2</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -30,7 +30,7 @@
                     <button class="cta-btn">Start Your Journey Today</button>
                 </div>
                 <div class="hero2-image">
-                    <img src="images/nature/DSC00947_1.JPG" alt="Wellness journey">
+                    <img src="assets/images/nature/dsc00947_1.jpg" alt="Wellness journey">
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                     <button class="learn-more-btn">Learn More &rarr;</button>
                 </div>
                 <div class="service-image">
-                    <img src="images/nature/DSC09108.JPG" alt="Individual coaching">
+                    <img src="assets/images/nature/dsc09108.jpg" alt="Individual coaching">
                 </div>
             </div>
 
@@ -83,7 +83,7 @@
                     <button class="learn-more-btn">Learn More &rarr;</button>
                 </div>
                 <div class="service-image">
-                    <img src="images/nature/DSC08481.JPG" alt="Workshops and events">
+                    <img src="assets/images/nature/dsc08481.jpg" alt="Workshops and events">
                 </div>
             </div>
         </div>
