--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motions and Emotions</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 </head>
 <body class="hero-background">
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -51,11 +51,11 @@
         <div class="philosophy-section-content">
             <div class="philosophy-right-column">
                 <div class="stacked-carousel-container">
-                    <img src="images/engagement copy/ILCE-7RM4A (778).webp" alt="Photography stack 1" class="stacked-carousel-image" data-position="1">
-                    <img src="images/engagement copy/ILCE-7RM4A (814).webp" alt="Photography stack 2" class="stacked-carousel-image" data-position="2">
-                    <img src="images/engagement copy/ILCE-7RM4A (666).webp" alt="Photography stack 3" class="stacked-carousel-image" data-position="3">
-                    <img src="images/engagement copy/ILCE-7RM4A (822).webp" alt="Photography stack 4" class="stacked-carousel-image" data-position="4">
-                    <img src="images/nature/DSC02424.webp" alt="Photography stack 5" class="stacked-carousel-image" data-position="5">
+                    <img src="assets/images/engagement-copy/ilce-7rm4a-(778).webp" alt="Photography stack 1" class="stacked-carousel-image" data-position="1">
+                    <img src="assets/images/engagement-copy/ilce-7rm4a-(814).webp" alt="Photography stack 2" class="stacked-carousel-image" data-position="2">
+                    <img src="assets/images/engagement-copy/ilce-7rm4a-(666).webp" alt="Photography stack 3" class="stacked-carousel-image" data-position="3">
+                    <img src="assets/images/engagement-copy/ilce-7rm4a-(822).webp" alt="Photography stack 4" class="stacked-carousel-image" data-position="4">
+                    <img src="assets/images/nature/dsc02424.webp" alt="Photography stack 5" class="stacked-carousel-image" data-position="5">
                 </div>
             </div>
             <div class="philosophy-left-column">
