--- a/public-events.html
+++ b/public-events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public Events - Motions and Emotions</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -45,40 +45,40 @@
             <h1 class="portfolio-main-title">Public Events</h1>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="images/nature/1000019342.jpg" alt="Public Event Image 1">
+                    <img src="assets/images/nature/1000019342.jpg" alt="Public Event Image 1">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC_0078.JPG" alt="Public Event Image 2">
+                    <img src="assets/images/nature/dsc_0078.jpg" alt="Public Event Image 2">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC_0148.JPG" alt="Public Event Image 3">
+                    <img src="assets/images/nature/dsc_0148.jpg" alt="Public Event Image 3">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC00537.JPG" alt="Public Event Image 4">
+                    <img src="assets/images/nature/dsc00537.jpg" alt="Public Event Image 4">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC00545.JPG" alt="Public Event Image 5">
+                    <img src="assets/images/nature/dsc00545.jpg" alt="Public Event Image 5">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC00546.JPG" alt="Public Event Image 6">
+                    <img src="assets/images/nature/dsc00546.jpg" alt="Public Event Image 6">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC00932.JPG" alt="Public Event Image 7">
+                    <img src="assets/images/nature/dsc00932.jpg" alt="Public Event Image 7">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC00938.JPG" alt="Public Event Image 8">
+                    <img src="assets/images/nature/dsc00938.jpg" alt="Public Event Image 8">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC00947_1.JPG" alt="Public Event Image 9">
+                    <img src="assets/images/nature/dsc00947_1.jpg" alt="Public Event Image 9">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC01033.JPG" alt="Public Event Image 10">
+                    <img src="assets/images/nature/dsc01033.jpg" alt="Public Event Image 10">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC01056.JPG" alt="Public Event Image 11">
+                    <img src="assets/images/nature/dsc01056.jpg" alt="Public Event Image 11">
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/nature/DSC01061.JPG" alt="Public Event Image 12">
+                    <img src="assets/images/nature/dsc01061.jpg" alt="Public Event Image 12">
                 </div>
             </div>
         </div>
