Feat: Implement image optimization and asset restructuring for performance and organization.
- Moved general website images (logo, about-me, carousel) to assets/images/website_use/.
- Optimized carousel images to 90% quality, resized, and updated index.html.
- Converted all portfolio images in assets/images/nature/ (used in public-events.html) to WebP, moved them to assets/images/portfolio_use/nature_webp/, and updated public-events.html.
- Converted blog images (from assets/images/website_use/blogs/) to WebP, renamed for web-friendliness, and updated blog-preview.html.
- Added CSS for responsive blog image containers.
- Deleted home2.html and old .jpg/.png image files.
- Ensured all image paths are correct and pointing to .webp files.

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/website_use/logo_transparent.webp" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -44,7 +44,7 @@
         <!-- Top Section -->
         <section class="about-section about-top">
             <div class="about-image-placeholder">
-                <img src="assets/images/about-me-ashay-image.webp" alt="About Ashay Image 1" class="about-image active">
+                <img src="assets/images/website_use/about-me-ashay-image" alt="About Ashay Image 1" class="about-image active">
                 <img src="assets/images/about-me-ashay-image-2.webp" alt="About Ashay Image 2" class="about-image">
             </div>
             <div class="about-text-content">
