--- a/blog-preview.html
+++ b/blog-preview.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/website_use/logo_transparent.webp" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -45,7 +45,9 @@
             <h1 class="blog-main-title">From the Blog</h1>
 
             <article class="blog-preview">
-                <div class="blog-preview-image-placeholder"></div>
+                <div class="blog-preview-image">
+                    <img src="assets/images/website_use/blogs/blue-angels.webp" alt="Blue Angels">
+                </div>
                 <div class="blog-preview-content">
                     <h2>The Science of Speed: Photographing the Blue Angels</h2>
                     <h3>A Technical Look at High-Speed Aviation Photography</h3>
@@ -56,7 +58,9 @@
             </article>
 
             <article class="blog-preview">
-                <div class="blog-preview-image-placeholder"></div>
+                <div class="blog-preview-image">
+                    <img src="assets/images/website_use/blogs/chicago_henge.webp" alt="Chicago Henge">
+                </div>
                 <div class="blog-preview-content">
                     <h2>Chasing the Sun: A Guide to Capturing Chicago Henge</h2>
                     <h3>Planning, Patience, and a Little Bit of Luck</h3>
@@ -67,7 +71,9 @@
             </article>
 
             <article class="blog-preview">
-                <div class="blog-preview-image-placeholder"></div>
+                <div class="blog-preview-image">
+                    <img src="assets/images/website_use/blogs/moonrise.webp" alt="Moonrise">
+                </div>
                 <div class="blog-preview-content">
                     <h2>Mastering Lunar Shots: PhotoPills and the Art of Moon Photography</h2>
                     <h3>Precision Planning for Celestial Captures</h3>
@@ -78,7 +84,9 @@
             </article>
 
             <article class="blog-preview">
-                <div class="blog-preview-image-placeholder"></div>
+                <div class="blog-preview-image">
+                    <img src="assets/images/website_use/blogs/lunar-eclipse.webp" alt="Lunar Eclipse">
+                </div>
                 <div class="blog-preview-content">
                     <h2>Capturing Celestial Spectacles: Photographing a Total Lunar Eclipse</h2>
                     <h3>From Blood Moon to Star Trails</h3>
