--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/website_use/logo_transparent.webp" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
