--- a/public-events.html
+++ b/public-events.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/website_use/logo_transparent.webp" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -45,40 +45,40 @@
             <h1 class="portfolio-main-title">Public Events</h1>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/1000019342.jpg" alt="Public Event Image 1">
+                    <img src="assets/images/portfolio_use/nature_webp/1000019342.webp" alt="Public Event Image 1">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc_0078.jpg" alt="Public Event Image 2">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc_0078.webp" alt="Public Event Image 2">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc_0148.jpg" alt="Public Event Image 3">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc_0148.webp" alt="Public Event Image 3">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc00537.jpg" alt="Public Event Image 4">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc00537.webp" alt="Public Event Image 4">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc00545.jpg" alt="Public Event Image 5">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc00545.webp" alt="Public Event Image 5">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc00546.jpg" alt="Public Event Image 6">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc00546.webp" alt="Public Event Image 6">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc00932.jpg" alt="Public Event Image 7">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc00932.webp" alt="Public Event Image 7">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc00938.jpg" alt="Public Event Image 8">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc00938.webp" alt="Public Event Image 8">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc00947_1.jpg" alt="Public Event Image 9">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc00947_1.webp" alt="Public Event Image 9">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc01033.jpg" alt="Public Event Image 10">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc01033.webp" alt="Public Event Image 10">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc01056.jpg" alt="Public Event Image 11">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc01056.webp" alt="Public Event Image 11">
                 </div>
                 <div class="portfolio-item">
-                    <img src="assets/images/nature/dsc01061.jpg" alt="Public Event Image 12">
+                    <img src="assets/images/portfolio_use/nature_webp/dsc01061.webp" alt="Public Event Image 12">
                 </div>
             </div>
         </div>
