--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="logo-container">
             <div class="logo-box">
-                <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Motions and Emotions Logo" class="new-logo"></a>
+                <a href="index.html"><img src="assets/images/website_use/logo_transparent.webp" alt="Motions and Emotions Logo" class="new-logo"></a>
             </div>
         </div>
         <nav class="right-nav">
@@ -51,11 +51,11 @@
         <div class="philosophy-section-content">
             <div class="philosophy-right-column">
                 <div class="stacked-carousel-container">
-                    <img src="assets/images/engagement-copy/ilce-7rm4a-(778).webp" alt="Photography stack 1" class="stacked-carousel-image" data-position="1">
-                    <img src="assets/images/engagement-copy/ilce-7rm4a-(814).webp" alt="Photography stack 2" class="stacked-carousel-image" data-position="2">
-                    <img src="assets/images/engagement-copy/ilce-7rm4a-(666).webp" alt="Photography stack 3" class="stacked-carousel-image" data-position="3">
-                    <img src="assets/images/engagement-copy/ilce-7rm4a-(822).webp" alt="Photography stack 4" class="stacked-carousel-image" data-position="4">
-                    <img src="assets/images/nature/dsc02424.webp" alt="Photography stack 5" class="stacked-carousel-image" data-position="5">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(778)_optimized.webp" alt="Photography stack 1" class="stacked-carousel-image" data-position="1">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(814)_optimized.webp" alt="Photography stack 2" class="stacked-carousel-image" data-position="2">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(666)_optimized.webp" alt="Photography stack 3" class="stacked-carousel-image" data-position="3">
+                    <img src="assets/images/website_use/original_carousel_images/ilce-7rm4a-(822)_optimized.webp" alt="Photography stack 4" class="stacked-carousel-image" data-position="4">
+                    <img src="assets/images/website_use/original_carousel_images/dsc02424_optimized.webp" alt="Photography stack 5" class="stacked-carousel-image" data-position="5">
                 </div>
             </div>
             <div class="philosophy-left-column">
